hphp/test/zend/bad/tests-classes/constants_error_005.php
<?php
  class myclass
  {
      const myConst = "$myVar";
  }
?>